tests/invalid-char-constant/out.txt
error: invalid character constant
  ┌─ err.sml:1:9
  │
1 │ val _ = #"あ"
  │         ^^^^^

lexing failed
